# libcangjie

./: .gitignore  Makefile.am  README.md  configure.ac
data/: cangjie.pc.in
data/cj3/: cj3-cc.mb  cj3-cjk.mb  cj3-sc.mb  cj3-tc.mb  md5sum
data/cj5/: cj5-cc.mb  cj5-cjk.mb  cj5-sc.mb  cj5-tc.mb
filter/: sc.txt  tc.txt
freq-data/: classic-frequency.txt  countfreq.sh  frequency.txt  get_classic_freq.py  quick-classic.txt
src/: cangjie.cpp  cangjie.h  cangjieconfig.h.in  char_type_builder.cpp  chchar.cpp  chchar.h  classicfreqdbbuilder.cpp  cli.cpp  dbbuilder.cpp  freqbuilder.cpp  fullchar.cpp  quick_classic_builder.cpp  test.cpp  util.cpp  util.h
tables/: COPYING.tables  LICENSE  README.tables  cj3-13053.txt  cj3-6763.txt  cj3-cc.txt  cj3-cjk.txt  cj3-tc.txt  cj5-13053.txt  cj5-70000.txt  cj5-cc.txt  cj5-sc.txt  cj5-tc.txt  jp.txt
tests/: testdbs.pl
tools/: dbbuilder.cpp  test.pl
words/: README  getcorpus.cpp
